# iceberg-loader

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  RELEASE.md  index.html  mkdocs.yml  pyproject.toml
.github/: PROJECT_METADATA.md  dependabot.yaml
.github/workflows/: ci.yml  docs.yml  pr-codeql.yaml  pr-tests.yaml  release.yml
docs/: examples.md  index.md
examples/: README.md  advanced_scenarios.py  catalog.py  compare_complex_json_fail.py  docker-compose.yml  index.html  load_complex_json.py  load_example.py  load_from_api.py  load_stream.py  load_timestamp_partitioning.py  load_upsert.py  load_with_commits.py  maintenance_example.py  rest_adapter.py  settings.py
examples/optional/: load_from_api.py  load_stream.py  maintenance_example.py
examples/trino-etc/catalog/: example.properties  iceberg.properties
search/: search_index.json
src/iceberg_loader/: __about__.py  __init__.py  arrow_utils.py  iceberg_loader.py  logger.py  maintenance.py  schema.py  settings.py  strategies.py  type_mappings.py
src/iceberg_loader/core/: config.py  loader.py  partitioning.py  schema.py  strategies.py
src/iceberg_loader/services/: logging.py
src/iceberg_loader/utils/: types.py
tests/: __init__.py  test_arrow_utils.py  test_config_validation.py  test_examples_smoke.py  test_iceberg_loader.py  test_maintenance.py  test_partitioning.py  test_streaming.py  test_type_mappings.py
tools/: run_examples_smoke.sh  uv-tools.sh
