[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iceberg-loader"
dynamic = ["version"]
description = 'Utilities for loading data into Iceberg tables using PyArrow'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["iceberg", "arrow", "etl"]
authors = [
  { name = "Ivan Matveev", email = "skioneim@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Typing :: Typed",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Operating System :: OS Independent",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pyarrow>=18.0.0",
  "pyiceberg>=0.7.1",
]

[project.optional-dependencies]
hive = [
  "pyiceberg[hive]>=0.6.0",
]
s3 = [
  "pyiceberg[s3fs]>=0.6.0",
]
all = [
  "pyiceberg[hive,s3fs,pyiceberg-core]>=0.6.0",
]
test = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
dev = [
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "pre-commit>=3.5.0",
  "twine>=5.0.0",
]

[project.urls]
Documentation = "https://github.com/Ivan Matveev/iceberg-loader#readme"
Issues = "https://github.com/Ivan Matveev/iceberg-loader/issues"
Source = "https://github.com/Ivan Matveev/iceberg-loader"

[tool.hatch.version]
path = "src/iceberg_loader/__about__.py"

[tool.hatch.envs.default]
features = ["all"]
dependencies = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.5.0",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
lint = "ruff check"
format = "ruff format"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/iceberg_loader tests}"

[tool.coverage.run]
source_pkgs = ["iceberg_loader", "tests"]
branch = true
parallel = true
omit = [
  "src/iceberg_loader/__about__.py",
]

[tool.coverage.paths]
iceberg_loader = ["src/iceberg_loader", "*/iceberg-loader/src/iceberg_loader"]
tests = ["tests", "*/iceberg-loader/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N", "TID"]
ignore = ["BLE001", "UP017"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = false
strict_optional = true
disallow_untyped_defs = true
disallow_untyped_calls = false
follow_imports = "normal"
show_error_codes = true
exclude = ["examples/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
warn_return_any = false

[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "pyiceberg.*", "requests"]
ignore_missing_imports = true

[tool.uv.workspace]
members = [
    "examples",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iceberg_loader"]
include = [
  "src/iceberg_loader/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/iceberg_loader/py.typed",
]

